fix(syntax): add overflow auto

--- a/src/styles/_syntax.scss
+++ b/src/styles/_syntax.scss
@@ -32,6 +32,7 @@ pre {
   width: 600px;
   padding: 20px 0;
   margin: 32px 0;
+  overflow: auto;
   border-radius: 20px;
   box-shadow: 0 0 2px -0.5px rgb(0 0 0 / 40%);
   transition: all 0.8s;
